<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Snake</string>
    <string name="launch_game">Play !</string>
    <string name="score">Your Score : %d</string>
    <string name="launch_settings">Settings</string>
    <string name="EasyMode">Easy</string>
    <string name="MediumMode">Medium</string>
    <string name="HardMode">Hard</string>
    <string name="Difficulty_text">Difficulty : </string>
    <string name="text_music">Music settings ON/OFF</string>
    <string name="toggleMusic_ON">ON</string>
    <string name="toggleMusic_OFF">OFF</string>
    <string name="musicSettings" tools:ignore="MissingTranslation">musicSettings</string>
    <string name="tutorial_text_left">Tap Left to turn Left</string>
    <string name="tutorial_text_right">Tap right to turn Right</string>
    <string name="tutorial_title">How to Play ?</string>
    <string name="text_button_tutorial">How to Play ?</string>
    <string name="bestScores">Best Scores</string>
    <string name="difficulty" tools:ignore="MissingTranslation">difficulty</string>
    <string name="yourScores">Your scores</string>
    <string name="pause">Paused !</string>
    <string name="player">Joueur</string>
    <string name="length">Length : %d</string>
    <string name="player_name" tools:ignore="MissingTranslation">Pseudo</string>
    <string name="your_nickname">Your nickname :</string>
    <string name="press_to_update">Touch the screen to display scores ! ;)</string>
    <string name="unknown">Unknown</string>
    <string name="empty" tools:ignore="MissingTranslation"> </string>
</resources>
