<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grass"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <!-- Music ON/OFF Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_music"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <!-- Music Toggle Button -->
    <ToggleButton
        android:id="@+id/toggleButtonMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/toggleMusic_OFF"
        android:textOn="@string/toggleMusic_ON" />

    <!-- Difficulty Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Difficulty_text"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <!-- Difficulty RadioGroup Selector -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Easy RadioButton -->
        <RadioButton
            android:id="@+id/radioButton_Easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EasyMode" />
        <!-- Medium RadioButton -->
        <RadioButton
            android:id="@+id/radioButton_Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MediumMode" />

        <!-- Hard RadioButton -->

        <RadioButton
            android:id="@+id/radioButton_Hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HardMode" />

    </RadioGroup>

</LinearLayout>