<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Player Label -->
    <TextView
        android:id="@+id/player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/player" />

    <!-- Length Score -->
    <TextView
        android:id="@+id/snakeLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/difficulty"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:textSize="15sp"
        tools:text="@string/length" />

    <!-- Score -->
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/difficulty"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:textSize="15sp"
        tools:text="@string/score" />

    <!-- Difficulty Label -->
    <TextView
        android:id="@+id/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/player"
        android:layout_alignRight="@id/player"
        android:padding="8dp"
        tools:text="@string/difficulty" />
</RelativeLayout>